--- a/css/scss/_page.scss
+++ b/css/scss/_page.scss
@@ -1,5 +1,9 @@
 .pageHeadingWrapper {
   padding-left: 20px;
+
+  *+* {
+    margin-top: 5px;
+  }
 }
 
 .pageHeading {
@@ -7,7 +11,14 @@
   margin: 0;
 }
 
+.pageHeadingList {
+  padding: 0;
+  margin-bottom: 0;
+}
+
 .pageHeadingLink {
+  font-size: 16px;
   text-decoration: none;
   color: var(--blue);
+  display: block;
 }
